# Fusion

./: .env.bak  .env.example  .gitignore  Cargo.toml  README.md  check_env.sh  package-lock.json
cache/: solidity-files-cache.json
config/: .env  default.toml
dashboard/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
dashboard/src/: App.tsx  index.css  types.ts
dashboard/src/api/: mock.ts  types.ts  voice-process.ts
dashboard/src/components/: BotStatusPanel.tsx  DashboardStats.tsx  FusionFace.tsx  FusionOrb.tsx  GasGauge.tsx  Lights.tsx  LiveFeeds.tsx  RiskLevelGauge.tsx  SlippageGauge.tsx  VoicePanel.tsx
dashboard_files/: dashboard.rs  fusion_chat.rs  hud_stat_card.rs  statistics_row.rs
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/src/: main.rs
frontend/src/api/: profit.rs
frontend/src/components/: completed_transactions.rs  dashboard.rs  footer.rs  header.rs  matrix_panel.rs  mod.rs  profit_transfer.rs  scanning_panel.rs  slider_liquidity.rs  slider_marginal_optimizer.rs  slider_profit_threshold.rs  wallet_connect.rs
frontend/src/components/ui/: accordion.rs  ai_orb.rs  ai_orb_states.rs  arbitrage_opportunities.rs  button.rs  footer.rs  fusion_chat.rs  header.rs  hud_stat_card.rs  mod.rs  statistics_row.rs  use_is_mobile.rs  utils.rs  wallet_connect.rs
frontend/static/: ai_voice.js  gauges.js  liquid_orb.js  orb3d.js  transaction_window.js
frontend/tests/: completed_transactions.rs  matrix_panel.rs  profit_transfer.rs  scanning_panel.rs  slider_liquidity.rs  slider_profit_threshold.rs  wallet_connect.rs
script/: DeployArbitrageExecutor.s.sol  DeployArbitrageExecutorMainnet.s.sol
src/: ArbitrageExecutor.sol  ai_controller.rs  analysis.rs  api.rs  api_ws.rs  arbitrage_executor_address.rs  config.rs  dex_price_fetch.rs  drizzle_config.rs  events.rs  execute_arbitrage.rs  execution_log.rs  flashloan.rs  lib.rs  liquidation_monitor.rs  liquidation_monitor_real.rs  main.rs  matrix.rs  matrix2d.rs  matrix2d_demo.rs  optimizer_ai.rs  providers.rs  providers_round_robin.rs  scan_matrix2d_demo.rs  shared_state.rs  websockets.rs  websockets_round_robin.rs
src/abi/: AaveLendingPool.json  CompoundComptroller.json  README.md  VenusComptroller.json
tests/: api.rs  arbitrage.rs  liquidation_monitor.rs  matrix_manager.rs  ws.rs
