[package]
name = "Fusion"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-util = "0.3"
serde_json = "1.0"
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
config = { version = "0.14", features = ["toml", "yaml", "json", "ron", "ini"] }
ethers = { version = "2.0", features = ["ws", "rustls"] } # Add ethers-rs with WebSocket & rustls support
tokio = { version = "1", features = ["full"] } # ethers-rs relies on tokio for async runtime
url = "2.5"
thiserror = "1.0"
# Add other dependencies later as needed# Add other dependencies later as needed
