[package]
name = "fusion"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4"
futures-util = "0.3"
futures = "0.3"
serde_json = "1.0"
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
config = { version = "0.14", features = ["toml", "yaml", "json", "ron", "ini"] }
ethers = { version = "2.0", features = ["ws", "rustls"] } # Add ethers-rs with WebSocket & rustls support
tokio = { version = "1", features = ["full"] } # ethers-rs relies on tokio for async runtime
url = "2.5"
thiserror = "2.0.12"
actix-web = "4"
actix-web-actors = "4"
actix = "0.13"
awc = "3"
log = "0.4"
actix-rt = "2"
actix-files = "0.6.6"
env_logger = "0.11.8"
once_cell = "1.17"

reqwest = { version = "0.12.15", features = ["json"] }
async-trait = "0.1.88"
rand = "0.9.1"

# Add other dependencies later as needed
