[package]
name = "fusion"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4"
futures-util = "0.3"
futures = "0.3"
serde_json = "1.0"
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
config = { version = "0.14", features = ["toml", "yaml", "json", "ron", "ini"] }
ethers = { version = "2.0", features = ["ws", "rustls"] } # Add ethers-rs with WebSocket & rustls support
tokio = { version = "1", features = ["full"] } # ethers-rs relies on tokio for async runtime
url = "2.5"
thiserror = "2.0.12"
actix-web = "4"
actix-web-actors = "4"
actix = "0.13"
actix-rt = "2"
actix-files = "0.6.6"
actix-cors = "0.7.1"
awc = "3"
log = { version = "0.4", features = ["max_level_info"] }
env_logger = { version = "0.11.8", features = ["default"] }
once_cell = "1.17"

reqwest = { version = "0.12.15", features = ["json"] }
async-trait = "0.1.88"
rand = "0.9.1"
uuid = { version = "1.16.0", features = ["v1", "v4"] }
# Add other dependencies later as needed
