[lib]
crate-type = ["cdylib"]

[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "frontend-bin"
path = "src/main.rs"

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3.77", features = ["Clipboard", "Window", "HtmlDetailsElement", "MediaQueryList", "MediaQueryListEvent", "EventTarget"] }
yew = { version = "0.21", features = ["csr"] }
gloo-net = "0.5"
gloo-timers = { version = "0.3", features = ["futures"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen-futures = "0.4"
futures-util = "0.3"
js-sys = "0.3"
rand = "0.8"

[dev-dependencies]
wasm-bindgen-test = "0.3"
yew = { version = "0.21", features = ["csr"] }
